mts/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-stg
spec:
  rules:
    - host: "api.mts.shamps.dev"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
  tls:
    - hosts:
        - "api.mts.shamps.dev"
      secretName: "api-mts-shamps-dev-tls"
